Changes in 0.11.2
  - Make `...` match zero lines

Changes in 0.11.1
 - Fix an issue with Unicode output on Windows (see #149)

Changes in 0.11.0
 - Support for GHC 8.0.1-rc2

Changes in 0.10.1
 - Automatically expand directories into contained Haskell source files (thanks @snoyberg)
 - Add cabal_macros.h and autogen dir by default (thanks @snoyberg)

Changes in 0.10.0
 - Support HASKELL_PACKAGE_SANDBOXES (thanks @snoyberg)

Changes in 0.9.13
 - Add ellipsis as wildcard

Changes in 0.9.12
 - Add support for GHC 7.10

Changes in 0.9.11
 - Defaults ambiguous type variables to Integer (#74)

Changes in 0.9.10
 - Add support for the upcoming GHC 7.8 release

Changes in 0.9.9
 - Add support for multi-line statements

Changes in 0.9.8
 - Support for GHC HEAD (7.7)

Changes in 0.9.7
 - Ignore trailing whitespace when matching example output

Changes in 0.9.6
 - Fail gracefully if GHCi is not supported (#46)

Changes in 0.9.5
 - Fix a GHC panic with GHC 7.6.1 (#41)

Changes in 0.9.4
 - Respect HASKELL_PACKAGE_SANDBOX (#39)
 - Print path to ghc on --version

Changes in 0.9.3
 - Properly handle additional object files (#38)

Changes in 0.9.2
 - Add support for QuickCheck properties

Changes in 0.9.1
 - Fix an issue with GHC 7.6.1 and type families

Changes in 0.9.0
 - Add support for setup code (see README).
 - There is no distinction between example/interaction anymore.  Each
   expression is counted as an example in the summary.

Changes in 0.8.0
 - Doctest now directly accepts arbitrary GHC options, prefixing GHC options
   with --optghc is no longer necessary

Changes in 0.7.0
 - Print source location for failing tests
 - Output less clutter on failing examples
 - Expose Doctest's functionality through a very simplistic API, which can be
   used for cabal integration

Changes in 0.6.1
 - Fix a parser bug with CR+LF line endings

Changes in 0.6.0
 - Support for ghc-7.4
 - Doctest now comes with it's own parser and does not depend on Haddock
   anymore

Changes in 0.5.2